--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.data.mongodb.database=admin
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=admin
 
+spring.rabbitmq.queue-name=devicePackages
+
