fix rabbitmq connection

--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.data.mongodb.database=admin
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=admin
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
 spring.rabbitmq.queue-name=devicePackages
 
