--- a/controller/Dockerfile
+++ b/controller/Dockerfile
@@ -5,10 +5,10 @@ FROM openjdk:21
 WORKDIR /
 
 # Копируем файл jar из локальной сборки в контейнер
-COPY controller/target/controller-0.0.1-SNAPSHOT.jar app.jar
+COPY target/controller-0.0.1-SNAPSHOT.jar app.jar
 
 # Указываем команду запуска приложения
 ENTRYPOINT ["java", "-jar", "app.jar"]
 
 # Указываем порт, который будет слушать приложение
-EXPOSE 8080
+EXPOSE 9090
