--- a/data-simulator/src/main/resources/application.yml
+++ b/data-simulator/src/main/resources/application.yml
@@ -14,3 +14,16 @@ data:
     message-per-second: ${DATA_SIMULATION_MESSAGE_PER_SECOND:1}
     available-device-properties-names: ${DATA_SIMULATION_AVAILABLE_DEVICE_PROPERTIES_NAMES:A,B,C}
     possible-device-properties-values: ${DATA_SIMULATION_POSSIBLE_DEVICE_PROPERTIES_VALUES:-1,0,1,[D],{"A":"1"}}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
