--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,19 @@ services:
       - mongo-controller
       - rabbitmq
 
+  rule-engine:
+    build:
+      context: rule-engine
+      dockerfile: Dockerfile
+    ports:
+      - "9092:9092"
+    environment:
+      - SPRING_MONGODB_HOST=mongo-controller
+      - SPRING_RABBITMQ_HOST=rabbitmq
+    depends_on:
+      - mongo-controller
+      - rabbitmq
+
   mongo-controller:
     image: mongo:latest
     ports:
@@ -45,11 +58,21 @@ services:
     volumes:
       - mongo-rule-engine-data:/data/db
 
-  mongo-express:
+  mongo-express-controller:
     image: mongo-express:latest
     restart: always
     ports:
-      - "8081:8081"
+      - "9096:8081"
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=admin
+      - ME_CONFIG_MONGODB_SERVER=mongo-controller
+
+  mongo-express-rule-engine:
+    image: mongo-express:latest
+    restart: always
+    ports:
+      - "9097:8081"
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=admin
@@ -64,6 +87,26 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: admin
       RABBITMQ_DEFAULT_PASS: admin
+
+  grafana:
+    build: './config/grafana'
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
+
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9095:9090
+    volumes:
+      - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - iot-controller
+      - data-simulator
 
 volumes:
   mongo-controller-data:
