--- a/rule-engine/src/main/resources/application.yaml
+++ b/rule-engine/src/main/resources/application.yaml
@@ -38,6 +38,13 @@ management:
       show-details: always
     env:
       show-values: always
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
 
 logging:
   level:
