--- a/rule-engine/src/main/resources/application.yaml
+++ b/rule-engine/src/main/resources/application.yaml
@@ -40,5 +40,8 @@ management:
       show-values: always
 
 logging:
+  file:
+    name: application.log
   level:
-    org.springframework.boot.actuate: DEBUG
+    root: info
+    net.logstash: debug
