--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     depends_on:
       - mongo-controller
       - rabbitmq
+      - logstash
 
   mongo-controller:
     image: mongo:latest
@@ -108,6 +109,52 @@ services:
     depends_on:
       - iot-controller
       - data-simulator
+
+  elasticsearch:
+    image: elasticsearch:7.16.1
+    volumes:
+      - ./configs/elasticsearch/config.yaml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+      - ./docker_volumes/elasticsearch/data:/usr/share/elasticsearch/data
+    environment:
+      ES_JAVA_OPTS: "-Xmx512m -Xms512m"
+      ELASTIC_USERNAME: "elastic"
+      ELASTIC_PASSWORD: "MyPw123"
+      discovery.type: single-node
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+
+  logstash:
+    image: logstash:7.16.1
+    volumes:
+      - ./configs/logstash/config.yaml:/usr/share/logstash/config/logstash.yml:ro
+      - ./configs/logstash/pipelines.yaml:/usr/share/logstash/config/pipelines.yml:ro
+      - ./configs/logstash/pipelines:/usr/share/logstash/config/pipelines:ro
+    environment:
+      LS_JAVA_OPTS: "-Xmx512m -Xms512m"
+    ports:
+      - "5044:5044"
+      - "5000:5000"
+      - "9600:9600"
+    depends_on:
+      - elasticsearch
+
+  kibana:
+    image: kibana:7.16.1
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ./configs/kibana/config.yaml:/usr/share/kibana/config/kibana.yml:ro
+    ports:
+      - "5601:5601"
+
+#  beats:
+#    image: elastic/filebeat:7.16.1
+#    volumes:
+#      - ./configs/filebeat/config.yaml:/usr/share/filebeat/filebeat.yml:ro
+#      - ./rule_engine_app/:/rule_engine_app/:ro
+#    depends_on:
+#      - elasticsearch
 
 volumes:
   mongo-controller-data:
