--- a/configs/logstash/pipelines/service_stamped_json_logs.conf
+++ b/configs/logstash/pipelines/service_stamped_json_logs.conf
@@ -6,14 +6,20 @@ input {
 }
 
 filter {
-  # Можно добавить фильтры для разбора логов, если нужно
+  if [host] =~ "iot-service-rule-engine" {
+    mutate { add_field => { "service_name" => "rule-engine" } }
+  } else if [host] =~ "iot-service-data-simulator" {
+    mutate { add_field => { "service_name" => "data-simulator" } }
+  } else if [host] =~ "iot-service-iot-controller" {
+    mutate { add_field => { "service_name" => "iot-controller" } }
+  }
 }
 
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    index => "spring-logs-%{+YYYY.MM.dd}"
-    user => "elastic"  # Если используется Basic Auth
+    index => "%{service_name}-%{+YYYY.MM.dd}"
+    user => "elastic"
     password => "MyPw123"
   }
 }
