--- a/controller/src/main/resources/application.yml
+++ b/controller/src/main/resources/application.yml
@@ -31,3 +31,9 @@ management:
     distribution:
       percentiles-histogram:
         "[http.server.requests]": true
+
+logging:
+  file:
+    name: application.log
+  level:
+    root: info
